adding events and docs

--- a/src/components/button-2/button-2.mdx
+++ b/src/components/button-2/button-2.mdx
@@ -5,7 +5,7 @@ Add examples and descriptions of the component features here.
 <code-bubble>
 
 ```html
-<my-button-2></my-button-2>
+<my-button-2>Click me!</my-button-2>
 ```
 
 ```tsx
@@ -14,7 +14,7 @@ import { MyButton_2 } from 'lit-starter-kit/react';
 export default () => {
   return (
     <>
-      <MyButton_2></MyButton_2>
+      <MyButton_2>Click me!</MyButton_2>
     </>
   );
 };
